# Pmetrics_rust

./: .gitignore  404.html  DESCRIPTION  NAMESPACE  README.html  README.qmd  authors.html  authors.md  errors.xlsx  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
Archived/: PM_model_old.R
R/: DataDescriptions.R  PM_bestdose.R  PM_compare.R  PM_data.R  PM_final.R  PM_fit.R  PM_model.R  PM_result.R  PM_sim.R  PM_tutorial.R  PMbuild.R  PMconfig.R  PMoptions.R  PMutilities.R  Pmetrics-package.R  build_model.R  extendr-wrappers.R  hermes_remote_client.R  hermes_remote_config.R  hermes_remote_result.R  options.R  zzz.R
articles/: data.html  index.html  intro.html  intro.md  models.html  models.md  objects.html  objects.md  overview.html  overview.md  plotly.html  pmetrics.html  pta.html  running.html  running.md  simulation.html  workflow.html  workflow.md
data-raw/: data-raw.R
inst/: .gitignore
man/: ITex.Rd  PM_model.Rd  PM_result.Rd  compile_model.Rd  fit.Rd  plot.PM_op.Rd  plot.PM_pta.Rd
reference/: ITex.html  ITload.html  ITreport.html  NM2PM.html  NPex.html  NPload.html  NPreport.html  NPrun.html  PMFortranConfig.html  PM_batch.html  PM_build.html  PM_compare.html  PM_cov.html  PM_cycle.html  PM_data.html  PM_final.html  PM_final.md  PM_fit.html  PM_help.html  PM_help.md  PM_load.html  PM_manual.html  PM_model.html  PM_model.md  PM_op.html  PM_opt.html  PM_parse.html  PM_pop.html  PM_post.html  PM_pri.html  PM_pta.html  PM_report.html  PM_report.md  (+138 more)
src/rust/: Cargo.toml
src/rust/src/: bestdose_executor.rs  executor.rs  lib.rs
(+121 files in other folders)
