[package]
name = 'pm_rs'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'pm_rs'

[dependencies]
extendr-api = '0.8.1'
pmcore = {version ="=0.20.0",  features = ["exa"]}
# pmcore = { path = "/Users/jotalvaro/code/LAPKB/PMcore", features = ["exa"] }

rayon = "1.10.0"
anyhow = "1.0.97"
os_pipe = "*"
gag = "*"
tracing-subscriber = "*"
tracing = "*"


[profile.release]
panic = "unwind"